--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:id="@+id/logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@raw/logo"
+        android:src="@raw/dext"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"/>
 
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:text="Rexus Store"
+        android:text="@string/app_name"
         android:textColor="#C5C5C5"
         android:textSize="24sp"
         android:textStyle="bold" />
