--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:id="@+id/logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@raw/dext"
+        android:src="@raw/logo"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"/>
 
