--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,22 +1,39 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.UTS_A22202302996" parent="Theme.MaterialComponents.DayNight">
-        <item name="colorPrimary">@color/primary_light</item>
-        <item name="colorPrimaryVariant">@color/primary</item>
-        <item name="colorOnPrimary">@color/white</item>
+    <style name="Base.Theme.UTS_A22202302996" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary colors -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/primary_variant</item>
+        <item name="colorOnPrimary">@color/on_primary</item>
 
-        <item name="colorSecondary">@color/secondary_light</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <!-- Secondary colors -->
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorSecondaryVariant">@color/secondary_variant</item>
+        <item name="colorOnSecondary">@color/on_secondary</item>
 
-        <item name="android:colorBackground">@color/black</item>
-        <item name="colorSurface">@color/black</item>
-        <item name="colorOnSurface">@color/white</item>
+        <!-- Background and surface -->
+        <item name="android:colorBackground">@color/background</item>
+        <item name="colorSurface">@color/surface</item>
+        <item name="colorOnSurface">@color/on_surface</item>
 
+        <!-- Error -->
         <item name="colorError">@color/error</item>
-        <item name="colorOnError">@color/white</item>
-    </style>
+        <item name="colorOnError">@color/on_error</item>
 
-    <style name="MyActionBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/white</item>
+        <!-- Text colors -->
+        <item name="android:textColorPrimary">@color/text_primary</item>
+        <item name="android:textColorSecondary">@color/text_secondary</item>
+        <item name="android:textColorHint">@color/text_hint</item>
+        <item name="actionMenuTextColor">@color/on_secondary</item>
+
+        <!-- Status bar color -->
+        <item name="android:statusBarColor">@color/primary_variant</item>
+
+        <!-- Navigation bar (if needed) -->
+        <item name="android:navigationBarColor">@color/secondary</item>
+
+        <!-- Control highlights -->
+        <item name="colorControlHighlight">@color/primary_light</item>
+
     </style>
 
     <style name="Theme.UTS_A22202302996" parent="Base.Theme.UTS_A22202302996" />
