menambah edit profil

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginEnd="16dp"
-                android:background="@android:color/white"
+                android:background="@color/white"
                 android:queryHint="Search..." />
 
         </androidx.appcompat.widget.Toolbar>
