--- a/app/src/main/res/layout/list_product_cart.xml
+++ b/app/src/main/res/layout/list_product_cart.xml
@@ -41,17 +41,38 @@
                     android:layout_marginTop="12dp"
                     android:text="Rexus Keyboard Gaming Mechanical Legionare MX5.2"
                     android:textStyle="bold"
+                    android:textColor="@color/text_primary"
                     android:textSize="16sp"
                     android:maxLength="50"/>
 
-                <TextView
-                    android:id="@+id/tvPrice"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:text="Rp 4.000.000"
-                    android:textStyle="bold"
-                    android:textSize="16sp"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="Rp 4.000.000"
+                        android:textStyle="bold"
+                        android:textColor="@color/primary"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/tvHargaDiskon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:text="Rp. 80.000"
+                        android:textStyle="bold"
+                        android:textColor="@color/text_primary"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="12dp"
+                        android:visibility="visible" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -75,6 +96,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1"
+                        android:textColor="@color/text_primary"
                         android:textStyle="bold"
                         android:textSize="16sp"/>
 
